--- a/add_task.html
+++ b/add_task.html
@@ -131,7 +131,8 @@
                                         <p>Assigned to</p>
                                     </label>
                                     <div id="assigned-to-input">
-                                        <input oninput="filterDropdownItems()" class="add-task-input-field placeholder-color" type="text"
+                                        <input oninput="filterDropdownItems()"
+                                            class="add-task-input-field placeholder-color" type="text"
                                             id="assigned-to-field" placeholder="Select contacts to assign"
                                             onclick="toggleDropdown(); toggleAssignToIconSrc(); ">
                                         <div onclick="toggleDropdown(); toggleAssignToIconSrc();"
@@ -164,8 +165,8 @@
                                         <p style="color: red;">*</p>
                                     </label>
                                     <input id="dueDateInputField" onclick="addRequiredDate(this)"
-                                        oninput="addRequiredDate(this)" class="add-task-input-field" type="date" lang="de-DE"
-                                        style="color: #ccc;">
+                                        oninput="addRequiredDate(this)" class="add-task-input-field" type="date"
+                                        lang="de-DE" style="color: #ccc;">
                                     <div class="required-text">
                                         <span id="requiredDate" class="d-none">This field is required</span>
                                     </div>
@@ -277,10 +278,10 @@
 
         <section class="mobile-nav-section">
             <section class="mobile-navBar">
-                <a href="./summary.html"><button class="mobile_nav_btn nav_summary active" disabled="true"><span><img
+                <a href="./summary.html"><button class="mobile_nav_btn nav_summary"><span><img
                                 src="./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
 
-                <a href="./add_task.html"><button class="mobile_nav_btn nav_add_task"><span><img
+                <a href="./add_task.html"><button class="mobile_nav_btn nav_add_task active" disabled="true"><span><img
                                 src="./assets/img/navBar/add_task.svg" alt="">Add Task</span></button></a>
 
                 <a href="./board.html"><button class="mobile_nav_btn nav_board"><span><img
