--- a/board.html
+++ b/board.html
@@ -116,7 +116,8 @@
                     <div class="board-title-field-wrapper">
                         <div class="to-do-title flex-title">
                             <h3>To-Do</h3>
-                            <button onclick="renderTaskOverlayContent(); validateInputFields()" class="add-to-do btn-title">
+                            <button onclick="renderTaskOverlayContent(); validateInputFields()"
+                                class="add-to-do btn-title">
                                 <svg width="10" height="11" viewBox="0 0 10 11" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path d="M5 1.5V9.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round" />
@@ -131,7 +132,8 @@
                     <div class="board-title-field-wrapper">
                         <div class="to-do-title flex-title">
                             <h3>In progress</h3>
-                            <button onclick="renderTaskOverlayContent(); validateInputFields()" class="add-in-progress btn-title">
+                            <button onclick="renderTaskOverlayContent(); validateInputFields()"
+                                class="add-in-progress btn-title">
                                 <svg width="10" height="11" viewBox="0 0 10 11" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path d="M5 1.5V9.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round" />
@@ -146,7 +148,8 @@
                     <div class="board-title-field-wrapper">
                         <div class="to-do-title flex-title">
                             <h3>Await feedback</h3>
-                            <button onclick="renderTaskOverlayContent(); validateInputFields()" class="add-await-feedback btn-title">
+                            <button onclick="renderTaskOverlayContent(); validateInputFields()"
+                                class="add-await-feedback btn-title">
                                 <svg width="10" height="11" viewBox="0 0 10 11" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path d="M5 1.5V9.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round" />
@@ -351,13 +354,13 @@
     <section class="mobile-nav-section">
 
         <section class="mobile-navBar">
-            <a href="./summary.html"><button class="mobile_nav_btn nav_summary active" disabled="true"><span><img
-                            src="./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
+            <a href="./summary.html"><button class="mobile_nav_btn nav_summary"><span><img
+                            src=" ./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
 
             <a href="./add_task.html"><button class="mobile_nav_btn nav_add_task"><span><img
                             src="./assets/img/navBar/add_task.svg" alt="">Add Task</span></button></a>
 
-            <a href="./board.html"><button class="mobile_nav_btn nav_board"><span><img
+            <a href="./board.html"><button class="mobile_nav_btn nav_board active" disabled="true"><span><img
                             src="./assets/img/navBar/board.svg" alt="">Board</span></button></a>
 
             <a href="./contacts.html"><button class="mobile_nav_btn nav_contacts"><span><img
