--- a/contacts.html
+++ b/contacts.html
@@ -163,7 +163,7 @@
         <section class="mobile-nav-section">
 
             <section class="mobile-navBar">
-                <a href="./summary.html"><button class="mobile_nav_btn nav_summary active" disabled="true"><span><img
+                <a href="./summary.html"><button class="mobile_nav_btn nav_summary"><span><img
                                 src="./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
 
                 <a href="./add_task.html"><button class="mobile_nav_btn nav_add_task"><span><img
@@ -172,7 +172,7 @@
                 <a href="./board.html"><button class="mobile_nav_btn nav_board"><span><img
                                 src="./assets/img/navBar/board.svg" alt="">Board</span></button></a>
 
-                <a href="./contacts.html"><button class="mobile_nav_btn nav_contacts"><span><img
+                <a href="./contacts.html"><button class="mobile_nav_btn nav_contacts active" disabled="true"><span><img
                                 src="./assets/img/navBar/contacts.svg" alt="">Contacts</span></button></a>
 
             </section>
