--- a/contacts.html
+++ b/contacts.html
@@ -178,6 +178,71 @@
             </section>
         </section>
 
+
+
 </body>
+
+<template id="overlayTemplate">
+    <section onclick="hideOverlayOnOutsideClick(event)" class="add-contact-overlay">
+        <div class="content-overlay-wrapper">
+
+            <div class="content-overlay-left">
+                <img src="./assets/img/Logo.png" alt="">
+                <div class="content-left-text">
+                    <p>Add contact</p>
+                    <span>Tasks are better with a team!</span>
+                    <div class="blue-line"></div>
+                </div>
+            </div>
+
+
+            <div class="content-overlay-right">
+                <div class="contact-avatar">
+                    <div class="avatar-circle"><img src="./assets/img/person.png" alt=""></div>
+                </div>
+                <div class="input-and-close-wrapper">
+                    <svg class="close-icon" onclick="hideOverlay()" viewBox="0 0 32 32" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <mask id="mask0_71720_5515" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="4" y="4"
+                            width="24" height="24">
+                            <rect x="4" y="4" width="24" height="24" fill="#D9D9D9" />
+                        </mask>
+                        <g mask="url(#mask0_71720_5515)">
+                            <path
+                                d="M16 17.4L11.1 22.3C10.9167 22.4834 10.6834 22.575 10.4 22.575C10.1167 22.575 9.88338 22.4834 9.70005 22.3C9.51672 22.1167 9.42505 21.8834 9.42505 21.6C9.42505 21.3167 9.51672 21.0834 9.70005 20.9L14.6 16L9.70005 11.1C9.51672 10.9167 9.42505 10.6834 9.42505 10.4C9.42505 10.1167 9.51672 9.88338 9.70005 9.70005C9.88338 9.51672 10.1167 9.42505 10.4 9.42505C10.6834 9.42505 10.9167 9.51672 11.1 9.70005L16 14.6L20.9 9.70005C21.0834 9.51672 21.3167 9.42505 21.6 9.42505C21.8834 9.42505 22.1167 9.51672 22.3 9.70005C22.4834 9.88338 22.575 10.1167 22.575 10.4C22.575 10.6834 22.4834 10.9167 22.3 11.1L17.4 16L22.3 20.9C22.4834 21.0834 22.575 21.3167 22.575 21.6C22.575 21.8834 22.4834 22.1167 22.3 22.3C22.1167 22.4834 21.8834 22.575 21.6 22.575C21.3167 22.575 21.0834 22.4834 20.9 22.3L16 17.4Z"
+                                fill="#2A3647" />
+                        </g>
+                    </svg>
+                    <div class="input-group">
+                        <div class="contact-form">
+                            <label for="name"></label>
+                            <input type="text" id="name" placeholder="Name" class="contact-input">
+                            <img class="input-icon" src="./assets/img/contacts_imgs/person.png" alt="Name Icon">
+
+                            <label for="email"></label>
+                            <input type="email" id="email" placeholder="Email" class="contact-input">
+                            <img class="input-icon" src="./assets/img/contacts_imgs/mail.png" alt="Email Icon">
+
+                            <label for="phone"></label>
+                            <input type="tel" id="phone" placeholder="Phone" class="contact-input">
+                            <img class="input-icon" src="./assets/img/contacts_imgs/call.png" alt="Phone Icon">
+                        </div>
+
+                    </div>
+                    <div class="button-group">
+                        <button onclick="hideOverlay()" class="cancel-btn-overlay">Cancel <svg width="14" height="14"
+                                viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M7.06917 7.00008L12.3122 12.2431M1.82617 12.2431L7.06917 7.00008L1.82617 12.2431ZM12.3122 1.75708L7.06817 7.00008L12.3122 1.75708ZM7.06817 7.00008L1.82617 1.75708L7.06817 7.00008Z"
+                                    stroke="#2A3647" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                            </svg>
+                            <button onclick="createContact()" class="create-btn-overlay">Create contact
+                                ✓</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</template>
 
 </html>
