responsive btn fixes

--- a/add_task.html
+++ b/add_task.html
@@ -229,7 +229,13 @@
                                                     onclick="confirmSubEdit()" src="./assets/img/addTask/check.svg"
                                                     alt="">
                                             </div>
+
+
                                         </section>
+
+                                        <div class="requiredResponsiveSpan"><span style="color:red">*</span><span>This
+                                                field
+                                                is required</span></div>
 
                                     </div>
 
@@ -245,13 +251,18 @@
 
 
 
-
                                 </div>
+
 
 
                             </div>
 
+
+
+
                         </div>
+
+
                         <div class="addTask-footer">
                             <div><span style="color:red">*</span><span>This field is required</span></div>
                             <div class="display-flex clear-create"><button onclick="resetAddTaskInputs()"
