copying code to place into template functions

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/login.css">
     <script defer src="./scripts/script.js"></script>
     <script defer src="./scripts/login.js"></script>
+    <script defer src="./scripts/login_templates.js"></script>
     <title>Join</title>
 </head>
 
@@ -43,9 +44,10 @@
                         <label for="rememberMe" class="checkbox-label">Remember me</label>
                     </div>
 
+
                     <div class="login-button-box">
-                        <button class="login" type="submit" id="login" disabled onclick="loginUser()">Login</button>
-                        <button class="guest-login">Guest Login</button>
+                        <!-- <button class="login" type="submit" id="login" disabled onclick="loginUser()">Login</button>
+                        <button class="guest-login">Guest Login</button> -->
                     </div>
                 </form>
             </div>
