added responsive join logo to all htmls

--- a/contacts.html
+++ b/contacts.html
@@ -67,6 +67,7 @@
         <div class="content-wrapper">
 
             <div class="header">
+                <div class="responsive-logo"><img src="./assets/img/responsiveLogo.png" alt=""></div>
                 <p>Kanban Project Management Tool</p>
                 <div class="header_btn_and_pic"> <a class="question-mark" href="./hilfe.html"><img
                             class="question-mark-img" src="./assets/img/navBar/help.png" alt=""></a>
