--- a/datenschutz.html
+++ b/datenschutz.html
@@ -30,8 +30,8 @@
                     <a href="./summary.html"><button class="nav_btn nav_summary "><span><img
                                     src="./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
 
-                    <a href="./add_task.html"><button class="nav_btn nav_add_task"
-                            ><span><img src="./assets/img/navBar/add_task.svg" alt="">Add
+                    <a href="./add_task.html"><button class="nav_btn nav_add_task"><span><img
+                                    src="./assets/img/navBar/add_task.svg" alt="">Add
                                 Task</span></button></a>
 
                     <a href="./board.html"><button class="nav_btn nav_board"><span><img
@@ -58,10 +58,11 @@
         <div class="content-wrapper">
 
             <div class="header">
+                <div class="responsive-logo"><img src="./assets/img/responsiveLogo.png" alt=""></div>
                 <p>Kanban Project Management Tool</p>
                 <div class="header_btn_and_pic">
                     <a class="question-mark" href="./hilfe.html"><img class="question-mark-img"
-                        src="./assets/img/navBar/help.png" alt=""></a>
+                            src="./assets/img/navBar/help.png" alt=""></a>
                     <div><img class="profile_picture" src="" alt="">
                     </div>
                 </div>
