--- a/summary.html
+++ b/summary.html
@@ -23,11 +23,11 @@
 
 
                 <section class="navBar">
-                    <a class="active" href="./summary.html"><button class="nav_btn nav_summary active" disabled><span><img
-                                    src="./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
+                    <a class="active" href="./summary.html"><button class="nav_btn nav_summary active"
+                            disabled><span><img src="./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
 
-                    <a href="./add_task.html"><button class="nav_btn nav_add_task"
-                            ><span><img src="./assets/img/navBar/add_task.svg" alt="">Add
+                    <a href="./add_task.html"><button class="nav_btn nav_add_task"><span><img
+                                    src="./assets/img/navBar/add_task.svg" alt="">Add
                                 Task</span></button></a>
 
                     <a href="./board.html"><button class="nav_btn nav_board"><span><img
@@ -54,6 +54,7 @@
         <div class="content-wrapper">
 
             <div class="header">
+                <div class="responsive-logo"><img src="./assets/img/responsiveLogo.png" alt=""></div>
                 <p>Kanban Project Management Tool</p>
                 <div class="header_btn_and_pic">
                     <a class="question-mark" href="./hilfe.html"><img class="question-mark-img"
@@ -149,10 +150,10 @@
                         </div>
                     </div>
                     <div class="greeting">
-                        <h3 id="greeting" class="font-size-47px color-2A3647 font-weight-500">Good morning, 
+                        <h3 id="greeting" class="font-size-47px color-2A3647 font-weight-500">Good morning,
                             <h2 class="user-name" id="userName"></h2>
                         </h3>
-                       
+
                     </div>
                 </div>
 
