--- a/legal_notice.html
+++ b/legal_notice.html
@@ -31,8 +31,8 @@
                     <a href="./summary.html"><button class="nav_btn nav_summary "><span><img
                                     src="./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
 
-                    <a href="./add_task.html"><button class="nav_btn nav_add_task"
-                            ><span><img src="./assets/img/navBar/add_task.svg" alt="">Add
+                    <a href="./add_task.html"><button class="nav_btn nav_add_task"><span><img
+                                    src="./assets/img/navBar/add_task.svg" alt="">Add
                                 Task</span></button></a>
 
                     <a href="./board.html"><button class="nav_btn nav_board"><span><img
@@ -58,6 +58,7 @@
         <div class="content-wrapper">
 
             <div class="header">
+                <div class="responsive-logo"><img src="./assets/img/responsiveLogo.png" alt=""></div>
                 <p>Kanban Project Management Tool</p>
                 <div class="header_btn_and_pic">
                     <a class="question-mark" href="./hilfe.html"><img class="question-mark-img"
@@ -88,7 +89,8 @@
 
                         <div class="passage">
                             <h3>Acceptance of terms</h3>
-                            <span>By accessing and using <span class="color-29ABE2">Join</span> (Product), you acknowlegde and agree ei the following
+                            <span>By accessing and using <span class="color-29ABE2">Join</span> (Product), you
+                                acknowlegde and agree ei the following
                                 terms
                                 and conitions, and any policies,
                                 guidelines, or amendments thereto that may be presented to you from time to time. We,
@@ -100,7 +102,8 @@
 
                         <div class="passage">
                             <h3>Scope anf ownership of the product</h3>
-                            <span><span class="color-29ABE2">Join</span> has been developed as part of a student group project in a web development
+                            <span><span class="color-29ABE2">Join</span> has been developed as part of a student group
+                                project in a web development
                                 bootcamp
                                 at the <span class="color-29ABE2">Developer Akademie GmbH</span>. it has
                                 an educational purpose and is not intended for extensive personal & business usage. As
@@ -110,7 +113,8 @@
                                 Product.
                                 <br>
                                 <br>
-                                The design of <span class="color-29ABE2">Join</span> is owned by the <span class="color-29ABE2">Developer Akademie GmbH</span>. Unauthorized use,
+                                The design of <span class="color-29ABE2">Join</span> is owned by the <span
+                                    class="color-29ABE2">Developer Akademie GmbH</span>. Unauthorized use,
                                 reproduction,
                                 modification, distibution, or
                                 replicationof the design is strictly prohibited.
@@ -119,7 +123,8 @@
 
                         <div class="passage">
                             <h3>Proprietary rights</h3>
-                            <span>Aside from the dasign owned by <span class="color-29ABE2">Developer Akademie GmbH</span>, we the listed students, retain
+                            <span>Aside from the dasign owned by <span class="color-29ABE2">Developer Akademie
+                                    GmbH</span>, we the listed students, retain
                                 all
                                 proprietary rights in <span class="color-29ABE2">Join</span>, including any
                                 associated copyrighted material, trademarks, and other proorietary information.
@@ -128,7 +133,8 @@
 
                         <div class="passage">
                             <h3>Use of the product</h3>
-                            <span><span class="color-29ABE2">Join</span> is intended to be used for lawful purposes only, in accordance with all
+                            <span><span class="color-29ABE2">Join</span> is intended to be used for lawful purposes
+                                only, in accordance with all
                                 applicable
                                 laws and regulations. Any use of <span class="color-29ABE2">Join</span> for illigal
                                 activities, or to harass, harm, threaten, or intimidate another person, is strictly
@@ -139,16 +145,19 @@
 
                         <div class="passage">
                             <h3>Disclaimer of warranties and limitation of liability</h3>
-                            <span><span class="color-29ABE2">Join</span> is provided "as is" without warranty of any kind, whether express or implied,
+                            <span><span class="color-29ABE2">Join</span> is provided "as is" without warranty of any
+                                kind, whether express or implied,
                                 including but not limited to the implied warranties of
                                 merchantability, fitness for a particular purpose, and non-infringement. In ne event
                                 will
                                 we, the listed students, or the <span class="color-29ABE2">Developer
-                                Akademie</span>, be liable for any direct, inderect, incidental, special, consequential or
+                                    Akademie</span>, be liable for any direct, inderect, incidental, special,
+                                consequential or
                                 exemplary damages, including but not limited to,
                                 damages for loss of profits, goodwill, use, data, or other intangible losses, even if we
                                 have been advised of the possibility of such
-                                damages, arising out of or in connection with the use or performance of <span class="color-29ABE2">Join</span>.
+                                damages, arising out of or in connection with the use or performance of <span
+                                    class="color-29ABE2">Join</span>.
                             </span>
                         </div>
 
@@ -158,7 +167,8 @@
                                 <span class="color-29ABE2">Developer Akademie</span>, and our affiliates, partners,
                                 officers, directors, agents, and employees, from and against any claim, demand, loss,
                                 damage, cost, or liability (including reasonable
-                                legal fees) arising out of or relating to your ouse of <span class="color-29ABE2">Join</span> and/or your breach of this
+                                legal fees) arising out of or relating to your ouse of <span
+                                    class="color-29ABE2">Join</span> and/or your breach of this
                                 Legal
                                 Notice.
                                 <br>
