privacy policy beta

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -15,6 +15,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Inconsolata:wght@200..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Moul&family=Overlock:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Press+Start+2P&family=Sniglet:wght@400;800&family=Varela+Round&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./styles/datenschutz.css">
 </head>
 
 <body>
@@ -69,7 +70,36 @@
             </div>
             <div class="content-right">
                 <!-- Hier kommt der Code hin! -->
+                <div class="content-datenschutz">
+                    <h1>Privacy Policy</h1>
+                    <p>Diese Datenschutzrichtlinie gilt für das Projektmanagement-Tool <strong>Join</strong>, das im
+                        Rahmen
+                        einer Weiterbildung entwickelt wurde.</p>
+                    <p>Entwickler: Jannik Hoff, Viktor Vaal, Daniela Hudson</p>
+                    <br>
+                    <h2>1. Erhebung und Verwendung von Daten</h2>
+                    <p>Wir erfassen und speichern personenbezogene Daten nur in dem Umfang, der für die Nutzung von Join
+                        erforderlich ist. Dazu gehören unter anderem Name, E-Mail-Adresse und Telefonnummer.</p>
+                    <br>
+                    <h2>2. Speicherung und Sicherheit</h2>
+                    <p>Alle gespeicherten Daten werden mit modernen Sicherheitsmaßnahmen geschützt, um unbefugten
+                        Zugriff zu
+                        verhindern.</p>
+                    <br>
+                    <h2>3. Weitergabe an Dritte</h2>
+                    <p>Wir geben keine personenbezogenen Daten an Dritte weiter, es sei denn, dies ist gesetzlich
+                        vorgeschrieben oder für den Betrieb von Join erforderlich.</p>
+                    <br>
+                    <h2>4. Rechte der Nutzer</h2>
+                    <p>Nutzer haben das Recht auf Auskunft, Berichtigung oder Löschung ihrer Daten. Anfragen können per
+                        E-Mail an das Entwicklerteam gestellt werden.</p>
+                    <br>
+                    <h2>5. Änderungen der Datenschutzrichtlinie</h2>
+                    <p>Diese Datenschutzrichtlinie kann jederzeit aktualisiert werden. Änderungen treten mit der
+                        Veröffentlichung auf der Website in Kraft.</p>
 
+                    <p>Letzte Aktualisierung: März 2025</p>
+                </div>
             </div>
         </div>
     </div>
