--- a/datenschutz.html
+++ b/datenschutz.html
@@ -72,33 +72,32 @@
                 <!-- Hier kommt der Code hin! -->
                 <div class="content-datenschutz">
                     <h1>Privacy Policy</h1>
-                    <p>Diese Datenschutzrichtlinie gilt für das Projektmanagement-Tool <strong>Join</strong>, das im
-                        Rahmen
-                        einer Weiterbildung entwickelt wurde.</p>
-                    <p>Entwickler: Jannik Hoff, Viktor Vaal, Daniela Hudson</p>
+                    <p>This privacy policy applies to the project management tool <strong>Join</strong>, which was
+                        developed as part of
+                        a professional development program.</p>
+                    <p>Developers: Viktor Vaal, Daniela Hudson, Jannik Hoff</p>
                     <br>
-                    <h2>1. Erhebung und Verwendung von Daten</h2>
-                    <p>Wir erfassen und speichern personenbezogene Daten nur in dem Umfang, der für die Nutzung von Join
-                        erforderlich ist. Dazu gehören unter anderem Name, E-Mail-Adresse und Telefonnummer.</p>
+                    <h2>1. Collection and Use of Data</h2>
+                    <p>We collect and store personal data only to the extent necessary for the use of Join.
+                        This includes, among others, name, email address, and phone number.</p>
                     <br>
-                    <h2>2. Speicherung und Sicherheit</h2>
-                    <p>Alle gespeicherten Daten werden mit modernen Sicherheitsmaßnahmen geschützt, um unbefugten
-                        Zugriff zu
-                        verhindern.</p>
+                    <h2>2. Storage and Security</h2>
+                    <p>All stored data is protected with modern security measures to prevent unauthorized
+                        access.</p>
                     <br>
-                    <h2>3. Weitergabe an Dritte</h2>
-                    <p>Wir geben keine personenbezogenen Daten an Dritte weiter, es sei denn, dies ist gesetzlich
-                        vorgeschrieben oder für den Betrieb von Join erforderlich.</p>
+                    <h2>3. Disclosure to Third Parties</h2>
+                    <p>We do not disclose any personal data to third parties unless required by law
+                        or necessary for the operation of Join.</p>
                     <br>
-                    <h2>4. Rechte der Nutzer</h2>
-                    <p>Nutzer haben das Recht auf Auskunft, Berichtigung oder Löschung ihrer Daten. Anfragen können per
-                        E-Mail an das Entwicklerteam gestellt werden.</p>
+                    <h2>4. User Rights</h2>
+                    <p>Users have the right to access, correct, or delete their data. Requests can be sent by
+                        email to the development team.</p>
                     <br>
-                    <h2>5. Änderungen der Datenschutzrichtlinie</h2>
-                    <p>Diese Datenschutzrichtlinie kann jederzeit aktualisiert werden. Änderungen treten mit der
-                        Veröffentlichung auf der Website in Kraft.</p>
+                    <h2>5. Changes to the Privacy Policy</h2>
+                    <p>This privacy policy may be updated at any time. Changes become effective upon
+                        publication on the website.</p>
 
-                    <p>Letzte Aktualisierung: März 2025</p>
+                    <p>Last updated: March 2025</p>
                 </div>
             </div>
         </div>
