--- a/datenschutz_login.html
+++ b/datenschutz_login.html
@@ -28,19 +28,8 @@
 
 
                 <section class="navBar">
-                    <a href="./summary.html"><button class="nav_btn nav_summary "><span><img
-                                    src="./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
-
-                    <a href="./add_task.html"><button class="nav_btn nav_add_task"><span><img
-                                    src="./assets/img/navBar/add_task.svg" alt="">Add
-                                Task</span></button></a>
-
-                    <a href="./board.html"><button class="nav_btn nav_board"><span><img
-                                    src="./assets/img/navBar/board.svg" alt="">Board</span></button></a>
-
-                    <a href="./contacts.html"><button class="nav_btn nav_contacts"><span><img
-                                    src="./assets/img/navBar/contacts.svg" alt="">Contacts</span></button></a>
-
+                    <a href="./index.html"><button class="nav_btn nav_summary "><span><img
+                                    src="./assets/img/loginprivacy.png" alt="">Log In</span></button></a>
                 </section>
             </div>
 
