--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="prvt-polce-legl-note-box">
             <div class="prvt-polce-legl-note">
-                <a href="./datenschutz.html" class="priv-legal">Privacy Policy</a>
+                <a href="./datenschutz_login.html" class="priv-legal">Privacy Policy</a>
                 <a href="./legal_notice.html" class="priv-legal">Legal notice</a>
             </div>
         </div>
