--- a/datenschutz_login.html
+++ b/datenschutz_login.html
@@ -22,7 +22,7 @@
 
     <div class="content-width">
         <div class="content_left">
-            <div class="logo-and-navbar-wrapper">
+            <div class="logo-and-navbar-wrapper-datenschutz">
                 <div class="logo"><img src="./assets/img/Logo.png" alt="">
                 </div>
 
