--- a/datenschutz_login.html
+++ b/datenschutz_login.html
@@ -35,10 +35,10 @@
 
             <div class="judicial-links">
                 <div class="judicial-links-container active">
-                    <a class="nav-link" href="./datenschutz.html">Privacy Policy</a>
+                    <a class="nav-link" href="./datenschutz_login.html">Privacy Policy</a>
                 </div>
                 <div class="judicial-links-container ">
-                    <a class="nav-link" href="./legal_notice.html">legal notice</a>
+                    <a class="nav-link" href="./legal_notice_login.html">legal notice</a>
                 </div>
 
             </div>
