rendering template for login form

--- a/index.html
+++ b/index.html
@@ -24,33 +24,7 @@
             <div class="login-h1">
                 <h1>Log in</h1>
             </div>
-            <div class="login-form">
-
-                <form id="loginForm" novalidate onsubmit="return false">
-                    <div class="email-wrapper">
-                        <input type="email" placeholder="Email" id="email">
-                        <span><img src="../assets/svg/mail.svg" alt=""></span>
-                    </div>
-
-                    <div class="pw-wrapper">
-                        <input type="password" placeholder="Password" id="password">
-                        <button type="button" disabled id="pw-icon" onclick="togglePassword()"><img
-                                src="../assets/svg/lock.svg" alt=""></button>
-                    </div>
-                    <span id="error"></span>
-
-                    <div class="remember-me-wrapper">
-                        <input type="checkbox" class="rm-chb" id="rememberMe">
-                        <label for="rememberMe" class="checkbox-label">Remember me</label>
-                    </div>
-
-
-                    <div class="login-button-box">
-                        <!-- <button class="login" type="submit" id="login" disabled onclick="loginUser()">Login</button>
-                        <button class="guest-login">Guest Login</button> -->
-                    </div>
-                </form>
-            </div>
+            <div class="login-form" id="loginFormBox"></div>
         </div>
 
         <div class="prvt-polce-legl-note-box">
@@ -59,6 +33,7 @@
                 <a href="./legal_notice.html" class="priv-legal">Legal notice</a>
             </div>
         </div>
+        
         <div class="p1-logo" id="p1Logo">
 
             <?xml version="1.0" encoding="utf-8"?>
