--- a/sign_up.html
+++ b/sign_up.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="./styles/signup.css">
     <script src="./scripts/script.js"></script>
     <script defer src="./scripts/signup.js"></script>
+    <script defer src="./scripts/signup_template.js"></script>
 
     <title>sign up in progress</title>
 </head>
 
-<body onload="init()">
+<body onload="SignUpInit()">
 
     <div class="signup-content-box" id="signupContentBox">
 
@@ -68,7 +69,6 @@
             <!-- <div class="logo"><img src="./assets/img/logo_join_pos.svg"></div> -->
         </div>
 
-
         <div class="signup-content">
             <div class="sgnp-h1">
                 <a href="index.html" class="arrow-link">
@@ -76,48 +76,7 @@
                 </a>
                 <h1>Sign Up</h1>
             </div>
-            <div class="sgnp-form">
-                <form id="signupForm" novalidate onsubmit="registerUser(); return false">
-
-                    <div class="name-wrapper">
-                        <input type="text" placeholder="Name" id="signupName">
-                        <span><img src="../assets/svg/person.svg" alt=""></span>
-                    </div>
-
-                    <div class="email-wrapper">
-                        <input type="email" placeholder="Email" id="email">
-                        <span><img src="../assets/svg/mail.svg" alt=""></span>
-                    </div>
-
-                    <div class="pw-wrapper">
-                        <input type="password" placeholder="Password" id="password">
-                        <button type="button" disabled id="pwIcon" onclick="togglePasswordVisibility(this)"><img
-                                src="../assets/svg/lock.svg" alt=""></button>
-                    </div>
-
-
-                    <div class="rep-pw-wrapper">
-                        <input type="password" placeholder="Password" id="repeatPassword">
-                        <button type="button" disabled id="repPwIcon" onclick="togglePasswordVisibility(this)"><img
-                                src="../assets/svg/lock.svg" alt=""></button>
-                    </div>
-                    <span id="error"></span>
-
-
-                    <div class="sgnp-button-box">
-
-                        <div class="confirm-priv-pol">
-                            <input type="checkbox" class="chb-priv-pol" id="chbPrivPol" onclick="toggleErrorPrivPol()">
-                            <label for="chbPrivPol">I agree to the <a href="#" class="priv-polce-link"> Privacy
-                                    policy</a></label>
-
-                        </div>
-                        <span id="errorPrivPol"></span> <!--onclick="showSignUpMsg(); return false" -->
-                        <button type="submit" class="signup" id="submitBtn" disabled>Sign up</button>
-                        <div class="signup-msg  d-none" id="signUpMsg">You have successesfully signed up</div>
-                    </div>
-                </form>
-            </div>
+            <div class="sgnp-form" id="signupFormBox"></div>
         </div>
 
         <div class="priv-polce-legl-note-box">
