--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script defer src="./scripts/script.js"></script>
     <script defer src="./scripts/login.js"></script>
     <script defer src="./scripts/login_templates.js"></script>
+    <script defer src="./scripts/priv_pol_template.js"></script>
     <title>Join</title>
 </head>
 
@@ -27,15 +28,14 @@
             <div class="login-form" id="loginFormBox"></div>
         </div>
 
-        <div class="prvt-polce-legl-note-box">
-            <div class="prvt-polce-legl-note">
+        <div class="prvt-polce-legl-note-box" id="signupContentBox">
+            <!-- <div class="prvt-polce-legl-note">
                 <a href="./datenschutz_login.html" class="priv-legal">Privacy Policy</a>
                 <a href="./legal_notice_login.html" class="priv-legal">Legal notice</a>
-            </div>
+            </div> -->
         </div>
-        
-        <div class="p1-logo" id="p1Logo">
 
+        <div class="p1-logo" id="p1Logo">
             <?xml version="1.0" encoding="utf-8"?>
             <!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
             <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
