cutting out code for priv-pol template and other minor canges

--- a/sign_up.html
+++ b/sign_up.html
@@ -9,8 +9,9 @@
     <script src="./scripts/script.js"></script>
     <script defer src="./scripts/signup.js"></script>
     <script defer src="./scripts/signup_template.js"></script>
+    <script defer src="./scripts/priv_pol_template.js"></script>
 
-    <title>sign up in progress</title>
+    <title>Join Sign Up</title>
 </head>
 
 <body onload="SignUpInit()">
@@ -65,8 +66,6 @@
                     </g>
                 </g>
             </svg>
-
-            <!-- <div class="logo"><img src="./assets/img/logo_join_pos.svg"></div> -->
         </div>
 
         <div class="signup-content">
@@ -79,11 +78,11 @@
             <div class="sgnp-form" id="signupFormBox"></div>
         </div>
 
-        <div class="priv-polce-legl-note-box">
-            <div class="priv-polce-legl-note">
+        <div class="priv-polce-legl-note-box" id="privPolBox">
+            <!-- <div class="priv-polce-legl-note">
                 <button class="priv-legal"></span> Privacy Policy</button>
                 <button class="priv-legal"></span> Legal notice</button>
-            </div>
+            </div> -->
         </div>
 
     </div>
