--- a/summary.html
+++ b/summary.html
@@ -59,10 +59,8 @@
                 <div class="header_btn_and_pic">
                     <a class="question-mark" href="./hilfe.html"><img class="question-mark-img"
                             src="./assets/img/navBar/help.png" alt=""></a>
-
                     <div style="position: relative;">
-                        <img class="profile_picture" src="./assets/img/dog-705820_640.jpg" alt=""
-                            onclick="toggleMenu()">
+                        <div onclick="toggleMenu()" class="user-icon" id="userIcon"></div>
                         <section class="menu">
                             <div class="menu-btns">
                                 <a href="./hilfe.html" class="menu-item">Help</a>
