--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="login-form" id="loginFormBox"></div>
         </div>
 
-        <div class="prvt-polce-legl-note-box" id="signupContentBox">
+        <div class="prvt-polce-legl-note-box" id="privPolBox">
             <!-- <div class="prvt-polce-legl-note">
                 <a href="./datenschutz_login.html" class="priv-legal">Privacy Policy</a>
                 <a href="./legal_notice_login.html" class="priv-legal">Legal notice</a>
