--- a/legal_notice_login.html
+++ b/legal_notice_login.html
@@ -28,7 +28,7 @@
 
 
                 <section class="navBar">
-                    <a href="./summary.html"><button class="nav_btn nav_summary "><span><img
+                    <a href="./index.html"><button class="nav_btn nav_summary "><span><img
                                     src="./assets/img/loginprivacy.png" alt="">Log In</span></button></a>
 
                 </section>
