card overlay template js

--- a/board.html
+++ b/board.html
@@ -10,6 +10,7 @@
     <script src="./scripts/AddTaskScripts/add_task.js"></script>
     <script src="./scripts/AddTaskScripts/addTaskContactsList.js"></script>
     <script src="./scripts/task_card_overlay_script.js"></script>
+    <script src="./scripts/task_card_overlay_template.js"></script>
     <script src="./scripts/AddTaskScripts/create_task.js" defer></script>
     <link rel="icon" type="image/x-icon" href="./assets/icons/Favicon.png">
     <title>Join</title>
