--- a/add_task.html
+++ b/add_task.html
@@ -74,7 +74,7 @@
                         <div onclick="toggleMenu()" class="user-icon" id="userIcon"></div>
                         <section class="menu">
                             <div class="menu-btns">
-                                <a href="./hilfe.html" class="menu-item">Help</a>
+                                <a href="./hilfe.html" class="menu-item help-link">Help</a>
                                 <a href="./legal_notice.html" class="menu-item">Legal Notice</a>
                                 <a href="./datenschutz.html" class="menu-item">Privacy Policy</a>
                                 <a onclick="logOut(); return false" href="" class="menu-item">Log out</a>
