--- a/summary.html
+++ b/summary.html
@@ -147,7 +147,7 @@
                             </button>
                         </div>
                     </div>
-                    <div class="greeting">
+                    <div id="greetingBackground" class="greeting">
                         <h3 id="greeting" class="font-size-47px color-2A3647 font-weight-500">Good morning,
                             <h2 class="user-name" id="userName"></h2>
                         </h3>
