add subtask input layout responsive

--- a/add_task.html
+++ b/add_task.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join</title>
     <link rel="icon" type="image/x-icon" href="./assets/icons/Favicon.png">
+    <link rel="stylesheet" href="./styles/standard.css">
     <link rel="stylesheet" href="./styles/AddTaskSection/addtask.css">
     <link rel="stylesheet" href="./styles/navBar.css">
-    <link rel="stylesheet" href="./styles/standard.css">
     <link rel="stylesheet" href="./styles/AddTaskSection/addTaskContactsList.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -205,8 +205,8 @@
                                             <p>Subtasks</p>
                                         </label>
                                         <div class="addTask-sectio subtask-section"><input
-                                                onclick="cancelEditSubtaskItem();" class="add-task-input-field"
-                                                type="text" placeholder="Add new subtask" maxlength="30"><img
+                                                onclick="cancelEditSubtaskItem();" class="add-task-input-field padding-right-68px"
+                                                type="text" placeholder="Add new subtask"><img
                                                 class="subtask-add" src="./assets/img/addTask/add.svg" alt=""
                                                 onclick="focusSubtaskInput()">
                                             <div class="cancel-check-btn"><img class="subtask-cancel" a
