improved subtask list height and required text mobile positioning

--- a/add_task.html
+++ b/add_task.html
@@ -220,6 +220,9 @@
 
                                         <section id="subtasksList" class="subtask-list"></section>
 
+                                        <div class="requiredResponsiveSpan">
+                                            <span style="color:red">*</span><span>This field is required</span>
+                                        </div>
 
                                         <section id="edit-subtask-item-field" class="edit-subtask-item">
                                             <input id="subtask-edit-input" class="subtask-edit-input" value=""
@@ -233,9 +236,7 @@
 
                                         </section>
 
-                                        <div class="requiredResponsiveSpan"><span style="color:red">*</span><span>This
-                                                field
-                                                is required</span></div>
+                                            
 
                                     </div>
 
