--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./assets/icons/favicon.svg">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./styles/login.css">
     <script defer src="./scripts/script.js"></script>
