--- a/sign_up.html
+++ b/sign_up.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./assets/icons/favicon.svg">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./styles/signup.css">
     <script src="./scripts/script.js"></script>
