added new favicon

--- a/board.html
+++ b/board.html
@@ -12,7 +12,7 @@
     <script src="./scripts/task_card_overlay_script.js"></script>
     <script src="./scripts/task_card_overlay_template.js"></script>
     <script src="./scripts/AddTaskScripts/create_task.js" defer></script>
-    <link rel="icon" type="image/x-icon" href="./assets/icons/Favicon.png">
+    <link rel="icon" type="image/x-icon" href="./assets/icons/favicon.svg">
     <title>Join</title>
     <link rel="stylesheet" href="./styles/navBar.css">
     <link rel="stylesheet" href="./styles/standard.css">
