added new favicon

--- a/contacts.html
+++ b/contacts.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join</title>
-    <link rel="icon" type="image/x-icon" href="./assets/icons/Favicon.png">
+    <link rel="icon" type="image/x-icon" href="./assets/icons/favicon.svg">
 
     <link rel="stylesheet" href="./styles/contactSection/contacts_style.css">
     <link rel="stylesheet" href="./styles/navBar.css">
