scroll board window

--- a/board.html
+++ b/board.html
@@ -117,7 +117,7 @@
                     <div class="board-title-field-wrapper">
                         <div class="to-do-title flex-title">
                             <h3>To-Do</h3>
-                            <button onclick="renderTaskOverlayContent(); validateInputFields()"
+                            <button onclick="renderTaskOverlayContent('toDo'); validateInputFields()"
                                 class="add-to-do btn-title">
                                 <svg width="10" height="11" viewBox="0 0 10 11" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -133,7 +133,7 @@
                     <div class="board-title-field-wrapper">
                         <div class="to-do-title flex-title">
                             <h3>In progress</h3>
-                            <button onclick="renderTaskOverlayContent(); validateInputFields()"
+                            <button onclick="renderTaskOverlayContent('inProgress'); validateInputFields()"
                                 class="add-in-progress btn-title">
                                 <svg width="10" height="11" viewBox="0 0 10 11" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -149,7 +149,7 @@
                     <div class="board-title-field-wrapper">
                         <div class="to-do-title flex-title">
                             <h3>Await feedback</h3>
-                            <button onclick="renderTaskOverlayContent(); validateInputFields()"
+                            <button onclick="renderTaskOverlayContent('awaitFeedback'); validateInputFields()"
                                 class="add-await-feedback btn-title">
                                 <svg width="10" height="11" viewBox="0 0 10 11" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
