formating and cleaning code

--- a/add_task.html
+++ b/add_task.html
@@ -18,8 +18,11 @@
         rel="stylesheet">
     <script src="scripts/script.js"></script>
     <script src="./scripts/ContactsScript.js/contacts.js"></script>
+    <script src="./scripts/ContactsScript.js/validate_contact_form.js"></script>
     <script src="./scripts/AddTaskScripts/addTaskContactsList.js" defer></script>
     <script src="./scripts/AddTaskScripts/add_task.js"></script>
+    <script src="./scripts/AddTaskScripts/subtasks.js"></script>
+    <script src="./scripts/AddTaskScripts/subtasks_template.js"></script>
     <script src="./scripts/AddTaskScripts/create_task.js" defer></script>
 </head>
 
