--- a/board.html
+++ b/board.html
@@ -8,6 +8,8 @@
     <script src="./scripts/boardTemplate.js"></script>
     <script src="./scripts/script.js"></script>
     <script src="./scripts/AddTaskScripts/add_task.js"></script>
+    <script src="./scripts/AddTaskScripts/subtasks.js"></script>
+    <script src="./scripts/AddTaskScripts/subtasks_template.js"></script>
     <script src="./scripts/AddTaskScripts/addTaskContactsList.js"></script>
     <script src="./scripts/task_card_overlay_script.js"></script>
     <script src="./scripts/task_card_overlay_template.js"></script>
