max-width content

--- a/board.html
+++ b/board.html
@@ -119,8 +119,7 @@
                     <div class="board-title-field-wrapper">
                         <div class="to-do-title flex-title">
                             <h3>To-Do</h3>
-                            <button onclick="renderTaskOverlayContent('toDo'); validateInputFields()"
-                                class="add-to-do btn-title">
+                            <button onclick="renderTaskOverlayContent(); validateInputFields();" class="add-to-do btn-title">
                                 <svg width="10" height="11" viewBox="0 0 10 11" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path d="M5 1.5V9.5" stroke="#2A3647" stroke-width="2" stroke-linecap="round" />
