privacy policy btn fix

--- a/sign_up.html
+++ b/sign_up.html
@@ -104,7 +104,8 @@
 
                         <div class="confirm-priv-pol">
                             <input type="checkbox" class="chb-priv-pol" id="chbPrivPol" onclick="toggleErrorPrivPol()">
-                            <label for="chbPrivPol">I agree to the <a href="#" class="priv-polce-link"> Privacy
+                            <label for="chbPrivPol">I agree to the <a href="./datenschutz.html" class="priv-polce-link">
+                                    Privacy
                                     policy</a></label>
 
                         </div>
@@ -119,11 +120,10 @@
 
         </div>
     </div>
-            <div class="priv-polce-legl-note-box" id="privPolBox"></div>
+    <div class="priv-polce-legl-note-box" id="privPolBox"></div>
 
-        <div class="backdrop d-none" id="backdrop"></div>
-      
+    <div class="backdrop d-none" id="backdrop"></div>
+
 </body>
 
 </html>
-    
