fixed contact formvalidation

--- a/contacts.html
+++ b/contacts.html
@@ -238,7 +238,7 @@
                                     d="M7.06917 7.00008L12.3122 12.2431M1.82617 12.2431L7.06917 7.00008L1.82617 12.2431ZM12.3122 1.75708L7.06817 7.00008L12.3122 1.75708ZM7.06817 7.00008L1.82617 1.75708L7.06817 7.00008Z"
                                     stroke="#2A3647" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                             </svg>
-                            <button onclick="createContact()" class="create-btn-overlay">Create contact
+                            <button id="createContactBtn" onclick="createContact()" class="create-btn-overlay" disabled>Create contact
                                 ✓</button>
                     </div>
                 </div>
