--- a/sign_up.html
+++ b/sign_up.html
@@ -104,7 +104,8 @@
 
                         <div class="confirm-priv-pol">
                             <input type="checkbox" class="chb-priv-pol" id="chbPrivPol" onclick="toggleErrorPrivPol()">
-                            <label for="chbPrivPol">I agree to the <a href="./datenschutz.html" class="priv-polce-link">
+                            <label for="chbPrivPol">I agree to the <a href="./datenschutz_login.html"
+                                    class="priv-polce-link">
                                     Privacy
                                     policy</a></label>
 
