--- a/datenschutz.html
+++ b/datenschutz.html
@@ -110,7 +110,7 @@
             <a href="./board.html"><button class="mobile_nav_btn nav_board"><span><img
                             src="./assets/img/navBar/board.svg" alt="">Board</span></button></a>
 
-            <a href="./contacts.html"><button class="mobile_nav_btn nav_contacts active"><span><img
+            <a href="./contacts.html"><button class="mobile_nav_btn nav_contacts"><span><img
                             src="./assets/img/navBar/contacts.svg" alt="">Contacts</span></button></a>
 
         </section>
