--- a/legal_notice_login.html
+++ b/legal_notice_login.html
@@ -173,7 +173,21 @@
         </div>
     </div>
 
+    <section class="mobile-nav-section">
 
+        <section class="mobile-navBar">
+            <a href="./index.html" class="mobileNavLogin"><button class="mobile_nav_btn nav_summary"><span><img
+                            src="./assets/img/loginprivacy.png" alt="">Log In</span></button></a>
+
+            <a href="./datenschutz_login.html"><button class="mobile_nav_btn nav_board"><span>Privacy
+                        Policy</span></button></a>
+
+            <a class="active" href=" ./legal_notice_login.html"><button class=" mobile_nav_btn nav_contacts active"
+                    disabled><span>Legal
+                        Notice</span></button></a>
+
+        </section>
+    </section>
 
 
 
