--- a/datenschutz_login.html
+++ b/datenschutz_login.html
@@ -87,7 +87,21 @@
         </div>
     </div>
 
+    <section class="mobile-nav-section">
 
+        <section class="mobile-navBar">
+            <a href="./index.html" class="mobileNavLogin"><button class="mobile_nav_btn nav_summary"><span><img
+                            src="./assets/img/loginprivacy.png" alt="">Log In</span></button></a>
+
+            <a class="active" href="./datenschutz_login.html"><button class="mobile_nav_btn nav_board active"
+                    disabled><span>Privacy
+                        Policy</span></button></a>
+
+            <a href="./legal_notice_login.html"><button class="mobile_nav_btn nav_contacts"><span>Legal
+                        Notice</span></button></a>
+
+        </section>
+    </section>
 
 
 
